--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="item_title">Item Title</string>
     <string name="item_release">Item Release</string>
     <string name="item_description">Item Description</string>
-    <string name="progress_bar">Progress Bar</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
